--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,27 @@
 /* Styles for the main container */
 
-.body {
-  background-color: #fac3c3;
-  background-image: url('/src/components/gradient.svg');
+body {
+  background-color: #121212;
 }
 
 .nav-bar {
   background-color: #333;
+  color: white;
+}
+
+.input-and-button {
+  display: flex;
+  height: 20px;
+  margin-bottom: 20px;
 }
 
 .container {
-  width: 500px;
-  margin: 0 auto;
-  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
   border-radius: 10px;
-  background-color: #fac3c3;
+  background-color: #121212;
   text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -23,8 +30,11 @@
 .input-box {
   width: 70%;
   padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 16px;
   margin-bottom: 20px;
+
   border: 1px solid #ccc;
   border-radius: 4px;
   text-align: center;
@@ -42,7 +52,7 @@
   border: none;
   padding: 10px 20px;
   border-radius: 4px;
-  margin: 2%;
+
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -53,30 +63,28 @@
 
 /* Styles for the Pokémon information container */
 .pokemon-info {
-  display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: #f7b1b1;
+  background-color: #a767f5;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   outline: 1px solid black;
-  display: flex;
 }
 
 /* Styles for the Pokémon name */
 .pokemon-name {
-  font-family: "Arial", cursive; /* Replace with your desired font */
+  font-family: "Arial", cursive;
   font-size: 48px;
   font-weight: bold;
-  color: black; /* Replace with your desired color */
+  color: white;
   text-align: center;
   text-transform: uppercase;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-.pokemon-stat-title{
+.pokemon-stat-title {
   margin: 0%;
 }
 
@@ -84,7 +92,7 @@
 .pokemon-image {
   width: 200px;
   height: 200px;
-  background-color: white;
+  background-color: #121212;
   margin: 0 auto;
   margin-bottom: 20px;
   border-radius: 10%;
@@ -100,11 +108,12 @@
 .pokemon-stats {
   font-size: 20px;
   text-align: center;
+  color: white;
   padding: 5%;
-  background-color: #f3eeee;
+  background-color: #121212;
   border-radius: 4px;
   box-shadow: 0 5px 4px rgba(0, 0, 0, 0.1);
-  outline: 1px solid black;
+  outline: 1px solid white;
 }
 
 .nav-list {
@@ -125,8 +134,32 @@
   font-family: "Arial", sans-serif; /* Replace with your desired font */
   font-size: 36px;
   font-weight: bold;
-  color: #333;
+  color: #ffffff;
   text-align: center;
   margin-bottom: 20px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #a767f5;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
 }
