--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-/* Styles for the main container */
 
 body {
   background-color: #121212;
@@ -9,42 +8,50 @@ body {
   color: white;
 }
 
-.input-and-button {
+.header {
   display: flex;
+  grid-row: 1/2;
+  grid-column: 1/6;
+  flex-direction: column;
+}
+
+.input-and-button {
+  grid-column: 1/6;
+  grid-row: 2/3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 20px;
+  margin-top: 10px;
   margin-bottom: 20px;
+
 }
 
 .container {
+  grid-column: 2/5;
   display: flex;
   flex-direction: row;
   justify-content: center;
-
   border-radius: 10px;
   background-color: #121212;
   text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  justify-content: start;
+  grid-row: 3/6;
 }
 
-/* Styles for the input box */
 .input-box {
-  width: 70%;
+  width: 50%;
   padding: 10px;
   margin-left: auto;
   margin-right: auto;
   font-size: 16px;
   margin-bottom: 20px;
-
   border: 1px solid #ccc;
   border-radius: 4px;
   text-align: center;
-  transition: width 0.1s ease-in-out;
-}
-.input-box:focus-within {
-  width: 20%;
 }
 
-/* Styles for the button */
 .button {
   background-color: #ffcc00;
   color: #fff;
@@ -52,7 +59,6 @@ body {
   border: none;
   padding: 10px 20px;
   border-radius: 4px;
-
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -61,22 +67,22 @@ body {
   background-color: #ffa500;
 }
 
-/* Styles for the Pokémon information container */
 .pokemon-info {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  margin: 10px;
   background-color: #a767f5;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   outline: 1px solid black;
+  height: 100%;
 }
 
-/* Styles for the Pokémon name */
 .pokemon-name {
   font-family: "Arial", cursive;
-  font-size: 48px;
+  font-size: 20px;
   font-weight: bold;
   color: white;
   text-align: center;
@@ -84,17 +90,11 @@ body {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
-.pokemon-stat-title {
-  margin: 0%;
-}
-
-/* Styles for the Pokémon image */
 .pokemon-image {
-  width: 200px;
-  height: 200px;
+  max-width: 100%;
+  height: auto;
   background-color: #121212;
-  margin: 0 auto;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   border-radius: 10%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
   transition: border-radius 0.2s ease-in-out;
@@ -104,16 +104,18 @@ body {
   border-radius: 80%;
 }
 
-/* Styles for the Pokémon stats */
+
 .pokemon-stats {
-  font-size: 20px;
+  font-size: 10px;
   text-align: center;
+  justify-content: center;
   color: white;
   padding: 5%;
   background-color: #121212;
   border-radius: 4px;
   box-shadow: 0 5px 4px rgba(0, 0, 0, 0.1);
   outline: 1px solid white;
+  height: 50%;
 }
 
 .nav-list {
@@ -122,17 +124,17 @@ body {
   gap: 1em;
 }
 
-/* Styles for the error message */
+
 .error-message {
   color: red;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
-/* Styles for the title */
+
 .title {
-  font-family: "Arial", sans-serif; /* Replace with your desired font */
-  font-size: 36px;
+  font-family: "Arial", sans-serif;
+  font-size: 48px;
   font-weight: bold;
   color: #ffffff;
   text-align: center;
@@ -162,4 +164,13 @@ a:active {
   color: yellow;
   background-color: transparent;
   text-decoration: underline;
+}
+
+.site-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  height: 100vh;
+  width: 95vw;
+  
 }
