--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@ body {
   grid-row: 1/2;
   grid-column: span 5;
   flex-direction: column;
-  position: relative;
+  position: sticky;
   top: 0px;
   left: 0px;
   z-index: 10;
@@ -33,7 +33,7 @@ body {
   grid-row: 1/2;
   grid-column: 2/6;
   flex-direction: column;
-  position: relative;
+  position: sticky;
   top: 0px;
   left: 0px;
   z-index: 10;
